<resources>
    <string name="app_name">Home-Made</string>
    <string name="facebook_app_id">1688083107914924</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Valider</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Déconnexion</string>
    <string name="image">Image</string>
    <string name="inscrivez_vous_pour">Inscrivez-vous pour .........</string>
    <string name="navezpascompte">N\'avez pas un compte?</string>
    <string name="navezpascompte2">Inscrivez-vous</string>
    <string name="outext">---------- ou ----------</string>
    <string name="name_display_here">Name display Here</string>
    <string name="logout">LogOut</string>
    <string name="profile_image">profile image</string>
    <string name="id">Id :</string>
    <string name="idtxt">Id...</string>
    <string name="design">Design :</string>
    <string name="designtxt">Design...</string>
    <string name="prompt_tel">Téléphone</string>


    <string-array name="labels_array">
        <item>Accessoires</item>
        <item>Decoration</item>
        <item>Couture</item>
        <item>Peinture</item>
        <item>Autres</item>
    </string-array>
    <string name="title_activity_connected">Bienvenue :)</string>
    <string name="spinner_item">spinner item</string>
    <string name="title_activity_connected_artisant">ConnectedArtisant</string>

</resources>
