<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:layout_marginBottom="20dp"
    android:orientation="vertical"
    tools:context="com.example.manel.prohomemade.Logactivity">


    <ScrollView
        android:id="@+id/scrol"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/imagehm" />

                <!-- <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="@string/inscrivez_vous_pour"
                     android:textAlignment="center"
                     android:textColor="@android:color/black"
                     android:textSize="15sp"
                     android:textStyle="bold"
                     android:singleLine="false"/>-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/btnflogin"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:paddingBottom="10dp"
                    android:text="Facebook"
                    android:textStyle="bold"></com.facebook.login.widget.LoginButton>

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/btngLogin"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:duplicateParentState="false"></com.google.android.gms.common.SignInButton>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/outext"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/txtLogInemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtLogInpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/buttonheight"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorpicker1"
                    android:drawableLeft="@android:drawable/ic_menu_send"
                    android:onClick="SignInbtn"
                    android:paddingBottom="10dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="false"
                    android:text="@string/navezpascompte"
                    android:textAlignment="center"
                    android:textColor="@color/colorpicker2"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:onClick="Inscri"
                    android:singleLine="false"
                    android:text="@string/navezpascompte2"
                    android:textAlignment="center"
                    android:textColor="@color/colorpicker2"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
